policies/kubernetes/worker-nodes/custom-3.2.1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cis-3-2-1-anonymous-auth-not-enabled
  annotations:
    policies.kyverno.io/category: CIS 3.2.1
    policies.kyverno.io/description: |
      Audit for resources that may allow anonymous authentication. Partial coverage, as some settings are outside Kyverno's scope.
spec:
  validationFailureAction: Audit
  rules:
    - name: disallow-anonymous-role-binding
      match:
        resources:
          kinds:
            - RoleBinding
            - ClusterRoleBinding
      validate:
        message: "RoleBindings and ClusterRoleBindings should not bind to system:anonymous."
        pattern:
          subjects:
            - kind: "User"
              name: "!system:anonymous"
