tests/kubernetes/custom-3.2.1/noncompliant/rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: noncompliant-rolebinding
  namespace: secure-ns
subjects:
  - kind: User
    name: system:anonymous
roleRef:
  kind: Role
  name: admin
  apiGroup: rbac.authorization.k8s.io
