tests/kubernetes/custom-3.2.1/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.1-noncompliant
policies:
  - ../../../../policies/kubernetes/worker-nodes/custom-3.2.1.yaml
resources:
  - rolebinding.yaml
results:
  - policy: cis-3-2-1-anonymous-auth-not-enabled
    rule: disallow-anonymous-role-binding
    resources:
      - noncompliant-rolebinding
    kind: RoleBinding
    result: fail
